Fixing prospectus download icon in dark mode

--- a/University/Admin assets/CSS/build-uhi-main-2.css
+++ b/University/Admin assets/CSS/build-uhi-main-2.css
@@ -703,6 +703,7 @@ main .colour-bar .flexwrap .search-bar {
 
 main .colour-bar .flexwrap .prospectus-down img {
   vertical-align: inherit;
+  color-scheme: only light;
 }
 
 main .colour-bar .flexwrap .search-bar form ul .ui-menu-item {
